Add scripts directory and tmux setup script

--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -19,6 +19,7 @@
     ~/.zsh:
     ~/.zshrc:
     ~/bin: bin/
+    ~/scripts: scripts/
 
 - shell:
     - [git submodule sync --recursive, Syncing submodules]
