Remove unused lines in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,12 +64,6 @@ bind-key -n S-Right select-pane -R
 # Toggle status bar
 bind-key S set-option status
 
-# easy resizing of panes
-#bind -r J resize-pane -D 5
-#bind -r K resize-pane -U 5
-#bind -r H resize-pane -L 5
-#bind -r L resize-pane -R 5
-
 
 ##############
 # Appearance #
@@ -83,7 +77,7 @@ set-option -g status-position bottom
 set-option -g status-justify left
 set-option -g status-style fg=white,bg=default,default
 set-option -g status-left '#[fg=white,bright]#{?client_prefix,#[fg=blue],}❮#I❯  '
-set-option -g status-right '#[fg=white,bright]#{?window_zoomed_flag,+, } #{?session_many_attached,#[fg=red],#[fg=blue]}❮#S❯ #[fg=white]| %a #[fg=red]%D #[fg=blue]%I:%M %p'
+set-option -g status-right '#[fg=white,bright]#{?window_zoomed_flag,+, } #{?session_many_attached,#[fg=red],#[fg=blue]}❮#S❯ #[fg=white]| #[fg=red]%a #[fg=white]%D #[fg=blue]%I:%M %p'
 
 # Window Status Bar
 set-window-option -g window-status-style fg=white,bg=default,default
