Update tmux status bar style

--- a/tmux.conf
+++ b/tmux.conf
@@ -46,7 +46,7 @@ unbind-key '"'
 unbind-key %
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded"
+bind-key r source-file ~/.tmux.conf \; display-message "Reloading config..."
 
 # M edits tmux config is horizontal split
 bind-key M split-window -h "vim ~/.tmux.conf"
@@ -77,7 +77,7 @@ set-option -g status-position bottom
 set-option -g status-justify left
 set-option -g status-style fg=white,bg=default,default
 set-option -g status-left '#[fg=white,bright]#{?client_prefix,#[fg=blue],}❮#I❯  '
-set-option -g status-right '#[fg=white,bright]#{?window_zoomed_flag,+, } #{?session_many_attached,#[fg=red],#[fg=blue]}❮#S❯ #[fg=white]| #[fg=red]%a #[fg=white]%D #[fg=blue]%I:%M %p'
+set-option -g status-right '#[fg=white,bright]#{?window_zoomed_flag,+, } #{?session_many_attached,#[fg=red],#[fg=blue]}#S #[fg=white]| #[fg=red]%a #[fg=white]%D #[fg=blue]%I:%M %p'
 
 # Window Status Bar
 set-window-option -g window-status-style fg=white,bg=default,default
