--- a/tmux.conf
+++ b/tmux.conf
@@ -33,6 +33,9 @@ set-option -g history-limit 65536
 
 set-option -g window-size largest
 
+# 12 hour clock
+set-window-option -g clock-mode-style 12
+
 
 ################
 # Key Bindings #
