Add tmux + vim integration
Add the vim-tmux-navigator plugin. This allows the use of <C-hjkl> to
switch between tmux splits as well as vim splits (or between the two of
them).

Also sets vi mode for selection in tmux which allows many vim
keybindings to be used (such as hjkl, wbe, HML, C-ud, $0...). Customized
to also include v for selection, C-a V for line selection, and V to
toggle block selection.

--- a/.gitmodules
+++ b/.gitmodules
@@ -93,3 +93,7 @@
 	path = vim/pack/vendor/start/vim-unimpaired
 	url = https://github.com/tpope/vim-unimpaired.git
 	ignore = untracked
+[submodule "vim/pack/vendor/start/vim-tmux-navigator"]
+	path = vim/pack/vendor/start/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator.git
+	ignore = untracked
