--- a/tmux.conf
+++ b/tmux.conf
@@ -41,6 +41,17 @@ set-window-option -g clock-mode-style 12
 # Key Bindings #
 ################
 
+# Get some vim keybindings (hjkl, wbe, 0$...)
+set-window-option -g mode-keys vi
+
+# Vim selection + copying + pasting compatability
+bind-key -T copy-mode-vi "v" send -X begin-selection # v starts selection
+bind-key V send-keys "0v\$" # <prefix> V starts line selection
+bind-key -T copy-mode-vi "V" send -X rectangle-toggle # V while in selection mode toggles block selection mode
+bind-key -T copy-mode-vi "y" send -X copy-selection-and-cancel
+bind-key p paste-buffer
+
+
 # split panes using | and -
 # panes open the same directory as the current pane
 bind-key | split-window -h -c "#{pane_current_path}"
@@ -67,6 +78,12 @@ bind-key -n S-Right select-pane -R
 # Toggle status bar
 bind-key S set-option status
 
+# Clear screen with <prefix> C-l (vim movements overwrite standalone C-l)
+bind-key C-l send-keys 'C-l'
+
+# Join pane/window into current window (only from the same session)
+bind-key @ command-prompt -p "Create pane from:" "join-pane -s ':%%'"
+
 
 ##############
 # Appearance #
@@ -87,6 +104,31 @@ set-window-option -g window-status-style fg=white,bg=default,default
 set-window-option -g window-status-format '#[bold,dim]#W#[default,dim]·#(echo $(basename "#{pane_current_path}")) '
 set-window-option -g window-status-current-style fg=red,bg=default,default
 set-window-option -g window-status-current-format '#[fg=blue,bright]#W#[default]·#[fg=red]#(echo $(basename "#{pane_current_path}")) '
+
+
+###################
+# Vim Integration #
+###################
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 
 #######################
