--- a/.install.conf.yaml
+++ b/.install.conf.yaml
@@ -9,6 +9,7 @@
     ~/.bash:
     ~/.bash_profile:
     ~/.bashrc:
+    ~/.brew-aliases:
     ~/.dotfiles: ''
     ~/.gitconfig:
     ~/.gitignore_global:
