--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,9 @@ set-option -g window-size largest
 # 12 hour clock
 set-window-option -g clock-mode-style 12
 
+# Turn on focus events
+set-option -g focus-events on
+
 
 ################
 # Key Bindings #
@@ -89,7 +92,7 @@ bind-key @ command-prompt -p "Create pane from:" "join-pane -s ':%%'"
 # Appearance #
 ##############
 
-set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
 
 # Status bar
 set-option -g message-style fg=white,bg=default,bright
